--- a/client_js.html
+++ b/client_js.html
@@ -32,7 +32,9 @@
             event.preventDefault();
             let destination = document.getElementById("phone-number").value;
             if (destination !== "") {
-              app.callServer(destination);
+              app.callServer(
+                "https://gate-opener-028o.onrender.com/" + destination
+              );
             } else {
               statusElement.innerText = "Please enter your phone number.";
             }
